@@ -1,0 +1,7 @@
+
+Removing trailing traverses...
+
+Concatenating traverses...
+
+Simplifying network...
+cavern: error: Survey not all connected to fixed stations
