@@ -1,3 +1,8 @@
+Fri Aug 07 10:55:42 GMT 2015  Olly Betts <olly@survex.com>
+
+	* src/netartic.c,tests/: Fix assertion if we try to identify a hanging
+	  survey by an anonymous station.
+
 Fri Aug 07 10:33:38 GMT 2015  Olly Betts <olly@survex.com>
 
 	* src/commands.c,tests/: Fix *declination with an angle to actually
